--- a/Market_basket.ipynb
+++ b/Market_basket.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+Ioemn9FroaKbyfNy96jQ",
+      "authorship_tag": "ABX9TyNU87XzSIjspMs+DQh1+ysL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "qTSblASiHKMm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Environment setup"
@@ -45,15 +36,24 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Upload the encryption key file"
+      ],
+      "metadata": {
+        "id": "nudITIZewXO6"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "metadata": {
         "id": "Ge0OVOLD3Fl3",
-        "outputId": "5253499a-79f7-4d55-81b8-4885b5e9eda4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 92
-        }
+          "height": 109
+        },
+        "outputId": "a737a1b6-cc45-4c44-e8e4-2d804c99ef92"
       },
       "outputs": [
         {
@@ -64,9 +64,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-c6aa2bff-fa2e-40e7-9d1f-97ecdadee3e8\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-ad20327e-f3e9-4580-a572-913b576caf77\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-c6aa2bff-fa2e-40e7-9d1f-97ecdadee3e8\">\n",
+              "     <output id=\"result-ad20327e-f3e9-4580-a572-913b576caf77\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -254,18 +254,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving kaggle.json to kaggle.json\n"
+            "Saving kaggle (1).json to kaggle (1) (1).json\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'kaggle.json': b'{\"username\":\"violaawor2\",\"key\":\"0312618599d69ab3c9c3a3b65fff5e6a\"}'}"
+              "{'kaggle (1) (1).json': b'{\"username\":\"violaawor2\",\"key\":\"b10218d275dad1e914008b49da4f407d\"}'}"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 13
         }
       ],
       "source": [
@@ -274,39 +274,33 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import os\n",
-        "os.environ['violaawor2'] = \"xxxxxx\"\n",
-        "os.environ['0312618599d69ab3c9c3a3b65fff5e6a'] = \"xxxxxx\"\n",
-        "\n"
+        "Rename the username and keyvalue"
       ],
       "metadata": {
-        "id": "Q7jbn2A3Hckh"
-      },
-      "execution_count": 12,
-      "outputs": []
+        "id": "ZnpOwbhlwft_"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!ls\n"
+      ],
       "metadata": {
-        "id": "SZrMjSi7JJie",
-        "outputId": "772acc0b-6451-436f-c460-8451427f551f",
+        "id": "lSUbpG4C8oCV",
+        "outputId": "07be32aa-ad13-41ad-db95-41d5bf6d3826",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "usage: kaggle [-h] [-v] [-W]\n",
-            "              {competitions,c,datasets,d,kernels,k,models,m,files,f,config}\n",
-            "              ...\n",
-            "kaggle: error: unrecognized arguments: -AmazonCustomerReview\n"
+            "'kaggle (1) (1).json'   kaggle1.json   sample_data\n"
           ]
         }
       ]
@@ -314,22 +308,201 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "os.environ['violaawor2'] = \"xxxxxx\"\n",
+        "os.environ['b10218d275dad1e914008b49da4f407d'] = \"xxxxxx\"\n",
+        "#check list of files in the amazon\n",
+        "!kaggle datasets list -s \"amazon book reviews\"\n",
         "\n"
       ],
       "metadata": {
-        "id": "O2aYoWluJ_cS",
-        "outputId": "baf4cb9d-4a5c-4ea8-8351-b8baecd392ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q7jbn2A3Hckh",
+        "outputId": "48132e05-0331-43b5-c13a-5e140866d978"
       },
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "403 Client Error: Forbidden for url: https://www.kaggle.com/api/v1/datasets/metadata/xxxxxx/AmazonCustomerReviewsDataset\n"
+            "ref                                                                title                                                     size  lastUpdated                 downloadCount  voteCount  usabilityRating  \n",
+            "-----------------------------------------------------------------  --------------------------------------------------  ----------  --------------------------  -------------  ---------  ---------------  \n",
+            "mohamedbakhet/amazon-books-reviews                                 Amazon Books Reviews                                1140283761  2022-09-13 23:04:08.787000          28238        198  1.0              \n",
+            "anshtanwar/top-200-trending-books-with-reviews                     Top 100 Bestselling Book Reviews on Amazon              432142  2023-11-09 06:31:02.210000          15551        120  1.0              \n",
+            "die9origephit/amazon-data-science-books                            Amazon Data Science Books Dataset                       109367  2023-01-05 03:01:16.353000           6556        109  1.0              \n",
+            "meetnagadia/amazon-kindle-book-review-for-sentiment-analysis       Amazon Kindle Book Review for Sentiment Analysis       6686485  2021-09-03 11:52:29.630000           5316         56  1.0              \n",
+            "vvorotnikov/amazon-data-science-book-reviews                       Amazon Data Science Book Reviews                       4025971  2020-08-26 10:12:27.123000            457         10  1.0              \n",
+            "shrutimehta/amazon-book-reviews-webscraped                         Amazon Book Reviews (WebScraped)                       1459495  2018-03-04 22:51:06.697000           1290         16  0.7058824        \n",
+            "abdallahwagih/books-dataset                                        Books Dataset                                          1657228  2023-12-13 02:26:07.263000           5381         88  1.0              \n",
+            "abdulhamidadavize/top-100-best-selling-books-on-amazon-20092021    TOP 100 BEST SELLING BOOKS ON AMAZON 2009-2021          111752  2022-10-16 10:27:27.650000           2305         23  0.7941176        \n",
+            "uzair01/amazon-books                                               Amazon Books details for computer science                30197  2023-09-26 20:11:34.780000            828         45  1.0              \n",
+            "amritvirsinghx/audible-complete-catalog                            Audible Complete Catalog                                761760  2020-09-13 10:07:44.760000            632         53  1.0              \n",
+            "shahriarkabir/amazon-100-bestselling-books-with-reviews-in-2024    Amazon 100 Bestselling Books with Reviews                87698  2024-06-06 01:23:17.980000            125         35  0.5882353        \n",
+            "joebeachcapital/amazon-books                                       Amazon Books                                           1292690  2023-08-30 03:38:11.857000           1346         42  1.0              \n",
+            "athu1105/tagmybook                                                 TagMyBook                                               696792  2022-09-09 10:46:14.507000           1936         32  1.0              \n",
+            "nikkiperry/amazon-book-reviews-haruki-murakami                     Amazon Book Reviews: Haruki Murakami                   2195367  2023-03-13 16:53:23.207000             45          3  0.88235295       \n",
+            "bhavikardeshna/amazon-customerreviews-polarity                     Amazon Customer-Reviews Polarity                     700672680  2022-06-27 19:10:45.673000            941         20  0.7941176        \n",
+            "jiteshkumarsahoo/ml-and-ds-books-on-amazon14-countries             ML and DS books on Amazon[14 countries]                 312480  2023-11-08 12:49:06.587000            134         14  1.0              \n",
+            "kashnitsky/exploring-transfer-learning-for-nlp                     Exploring transfer learning for NLP                  610568813  2019-06-12 11:07:13.660000            398         17  0.9411765        \n",
+            "jiteshkumarsahoo/amazon-machine-learning-book-dataset11-countries  Amazon Machine Learning book dataset[11 Countries]      165159  2023-11-01 03:31:48.343000             88         13  0.9411765        \n",
+            "smriti21/amazonbookreviews                                         Amazon-book-reviews                                   18629194  2020-04-21 11:52:03.137000            117          3  0.23529412       \n",
+            "jiyoungkimpf/amazon-best-sellers-of-20102020-top-100-books         Amazon Best Sellers of 2010-2020 (Top 100 Books)         30329  2021-02-05 18:50:13.547000            831          9  0.8235294        \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set up Kaggle credentials\n",
+        "!mkdir -p ~/.kaggle\n",
+        "!mv \"kaggle (1).json\" ~/.kaggle/kaggle.json\n",
+        "!chmod 600 ~/.kaggle/kaggle.json\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ETj55-5UZrA6",
+        "outputId": "966f0b8f-7f2f-400c-d3e7-7061ff179250",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mv: cannot stat 'kaggle (1).json': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "download file"
+      ],
+      "metadata": {
+        "id": "bOCq5Ol29_UL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!kaggle datasets download -d mohamedbakhet/amazon-books-reviews"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SZrMjSi7JJie",
+        "outputId": "b004a966-00b9-4aac-88fa-af078bd507d6"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset URL: https://www.kaggle.com/datasets/mohamedbakhet/amazon-books-reviews\n",
+            "License(s): CC0-1.0\n",
+            "Downloading amazon-books-reviews.zip to /content\n",
+            " 98% 1.04G/1.06G [00:17<00:00, 182MB/s]\n",
+            "100% 1.06G/1.06G [00:21<00:00, 53.3MB/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Unzip the books-review file"
+      ],
+      "metadata": {
+        "id": "4_HSNa1U_ZOX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip amazon-books-reviews.zip\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O2aYoWluJ_cS",
+        "outputId": "b264ccc9-3060-4a7c-a33f-739a1d6f5195"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  amazon-books-reviews.zip\n",
+            "  inflating: Books_rating.csv        \n",
+            "  inflating: books_data.csv          \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Load the file"
+      ],
+      "metadata": {
+        "id": "x6nbT60lAHjU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "Books_rating = pd.read_csv('Books_rating.csv')"
+      ],
+      "metadata": {
+        "id": "3tEiFFqhcibh"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Explorotory data analysis"
+      ],
+      "metadata": {
+        "id": "c1fj6jnqALS1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install"
+      ],
+      "metadata": {
+        "id": "2_Bf4XQUAPHS",
+        "outputId": "e01ef93d-1361-4fb8-b174-ffffd8bb39e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement ydataprofiling (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for ydataprofiling\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
           ]
         }
       ]
