exploratory data analysis

--- a/Market_basket.ipynb
+++ b/Market_basket.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNU87XzSIjspMs+DQh1+ysL",
+      "authorship_tag": "ABX9TyOTPTSJ5hnomMAd6sRr4uP2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "id": "Ge0OVOLD3Fl3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 109
+          "height": 92
         },
         "outputId": "a737a1b6-cc45-4c44-e8e4-2d804c99ef92"
       },
@@ -288,11 +288,11 @@
         "!ls\n"
       ],
       "metadata": {
-        "id": "lSUbpG4C8oCV",
-        "outputId": "07be32aa-ad13-41ad-db95-41d5bf6d3826",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lSUbpG4C8oCV",
+        "outputId": "07be32aa-ad13-41ad-db95-41d5bf6d3826"
       },
       "execution_count": 21,
       "outputs": [
@@ -364,11 +364,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "ETj55-5UZrA6",
-        "outputId": "966f0b8f-7f2f-400c-d3e7-7061ff179250",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ETj55-5UZrA6",
+        "outputId": "966f0b8f-7f2f-400c-d3e7-7061ff179250"
       },
       "execution_count": 30,
       "outputs": [
@@ -485,24 +485,38 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install"
+        "Books_rating.info()"
       ],
       "metadata": {
-        "id": "2_Bf4XQUAPHS",
-        "outputId": "e01ef93d-1361-4fb8-b174-ffffd8bb39e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2_Bf4XQUAPHS",
+        "outputId": "d9beb49e-25d4-47a8-8399-ba37369a8242"
       },
-      "execution_count": 44,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement ydataprofiling (from versions: none)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for ydataprofiling\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 3000000 entries, 0 to 2999999\n",
+            "Data columns (total 10 columns):\n",
+            " #   Column              Dtype  \n",
+            "---  ------              -----  \n",
+            " 0   Id                  object \n",
+            " 1   Title               object \n",
+            " 2   Price               float64\n",
+            " 3   User_id             object \n",
+            " 4   profileName         object \n",
+            " 5   review/helpfulness  object \n",
+            " 6   review/score        float64\n",
+            " 7   review/time         int64  \n",
+            " 8   review/summary      object \n",
+            " 9   review/text         object \n",
+            "dtypes: float64(2), int64(1), object(7)\n",
+            "memory usage: 228.9+ MB\n"
           ]
         }
       ]
