--- a/Market.ipynb
+++ b/Market.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiT4JAhFX4MaFpbCUQu83J",
+      "authorship_tag": "ABX9TyNDONxR4MjmAHPzWYrdyKeI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,9 +192,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#dataset = \"arashnic/book-recommendation-dataset\"\n",
-        "#data_dir = Path(\"data\")\n",
-        "#data_dir.mkdir(exist_ok=True)"
+        "dataset = \"arashnic/book-recommendation-dataset\"\n",
+        "data_dir = Path(\"data\")\n",
+        "data_dir.mkdir(exist_ok=True)"
       ],
       "metadata": {
         "id": "utoR0dUiOzLg"
@@ -223,7 +223,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "169659fb-00e4-471e-8808-89bb2271ad87"
+        "outputId": "4874df97-f368-4ba0-d4cf-f9b5eea9f31b"
       },
       "execution_count": null,
       "outputs": [
@@ -234,8 +234,8 @@
             "Dataset URL: https://www.kaggle.com/datasets/mohamedbakhet/amazon-books-reviews\n",
             "License(s): CC0-1.0\n",
             "Downloading amazon-books-reviews.zip to data\n",
-            " 99% 1.05G/1.06G [00:33<00:00, 18.4MB/s]\n",
-            "100% 1.06G/1.06G [00:33<00:00, 33.8MB/s]\n"
+            " 99% 1.05G/1.06G [00:03<00:00, 283MB/s]\n",
+            "100% 1.06G/1.06G [00:04<00:00, 279MB/s]\n"
           ]
         }
       ]
@@ -260,7 +260,7 @@
           "height": 342
         },
         "id": "gs7T-tURgBxg",
-        "outputId": "13e46bcb-2d40-4e6d-efef-ac4bc0210699"
+        "outputId": "640de46c-123b-400c-8637-d776c92a1c2b"
       },
       "execution_count": null,
       "outputs": [
@@ -323,7 +323,7 @@
           "height": 522
         },
         "id": "XE0wWtiJnwJU",
-        "outputId": "71e86c69-20e5-40ff-a009-f0b38016eb5a"
+        "outputId": "b6043378-8c4a-4bb4-9239-dfd5c8b9de7c"
       },
       "execution_count": null,
       "outputs": [
@@ -397,7 +397,7 @@
           "height": 129
         },
         "id": "7mVLe73wjKPB",
-        "outputId": "3e2f37e6-d0ed-4eef-f06e-0cc5c5590a96"
+        "outputId": "d23a0447-1615-41bc-ec6d-39b6441db2a0"
       },
       "execution_count": null,
       "outputs": [
@@ -426,36 +426,58 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 12
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "display(value.null)"
+        "display(df.is_duplicated().sum())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
+          "height": 35
         },
         "id": "wKSWvrnhmBFi",
-        "outputId": "63867536-874f-4244-e01c-8b1475db3ed4"
+        "outputId": "66f2362a-9772-4ea8-ff3a-3e1893b15fe8"
       },
       "execution_count": null,
       "outputs": [
         {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "16483"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "dd9e44d5",
+        "outputId": "00585bda-5430-4666-e6c2-d408b1ad18f7"
+      },
+      "source": [],
+      "execution_count": null,
+      "outputs": [
+        {
           "output_type": "error",
-          "ename": "ColumnNotFoundError",
-          "evalue": "unable to find column \"Rating\"; valid columns: [\"Id\", \"Title\", \"Price\", \"User_id\", \"profileName\", \"review/helpfulness\", \"review/score\", \"review/time\", \"review/summary\", \"review/text\"]\n\nResolved plan until failure:\n\n\t---> FAILED HERE RESOLVING 'filter' <---\nDF [\"Id\", \"Title\", \"Price\", \"User_id\"]; PROJECT */10 COLUMNS",
+          "ename": "AttributeError",
+          "evalue": "'DataFrame' object has no attribute 'is_null'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mColumnNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-76-2125740853.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Rating\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_null\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/polars/dataframe/frame.py\u001b[0m in \u001b[0;36mfilter\u001b[0;34m(self, *predicates, **constraints)\u001b[0m\n\u001b[1;32m   5016\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5017\u001b[0m         \"\"\"\n\u001b[0;32m-> 5018\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlazy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpredicates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mconstraints\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_eager\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5019\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5020\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0moverload\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/polars/lazyframe/frame.py\u001b[0m in \u001b[0;36mcollect\u001b[0;34m(self, type_coercion, _type_check, predicate_pushdown, projection_pushdown, simplify_expression, slice_pushdown, comm_subplan_elim, comm_subexpr_elim, cluster_with_columns, collapse_joins, no_optimization, streaming, engine, background, _check_order, _eager, **_kwargs)\u001b[0m\n\u001b[1;32m   2054\u001b[0m         \u001b[0;31m# Only for testing purposes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2055\u001b[0m         \u001b[0mcallback\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_kwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"post_opt_callback\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallback\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2056\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrap_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mldf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcallback\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2057\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0moverload\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mColumnNotFoundError\u001b[0m: unable to find column \"Rating\"; valid columns: [\"Id\", \"Title\", \"Price\", \"User_id\", \"profileName\", \"review/helpfulness\", \"review/score\", \"review/time\", \"review/summary\", \"review/text\"]\n\nResolved plan until failure:\n\n\t---> FAILED HERE RESOLVING 'filter' <---\nDF [\"Id\", \"Title\", \"Price\", \"User_id\"]; PROJECT */10 COLUMNS"
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-16-3236086775.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_null\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'is_null'"
           ]
         }
       ]
